Array comparison, more efficient itemUpdate, getting ready for file upload

--- a/public/views/admin.html
+++ b/public/views/admin.html
@@ -14,8 +14,8 @@
     </style>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   </head>
-  
-  <body>  
+
+  <body>
     <div style="margin-top: 5%"></div>
     <h1 id="header" class="loginHeader">Yeemazon</h1>
     <h2 class="loginHeader">Admin Actions</h2>
@@ -27,6 +27,7 @@
       <input type="text" id="id" value="Item ID" class="loginInput"></input>
       <input type="text" id="desc" value="Item Description" class="loginInput"></input>
       <input type="text" id="price" value="Item Price" class="loginInput"></input>
+      <input type="file" id="pic" value="Picture" class="loginInput"></input>
       <input type="text" id="key" value="Key Words" class="loginInput"></input>
       <div style="margin-top: 30px"></div>
       <button id="add" class="request">Add Item</button>
@@ -38,6 +39,4 @@
 
   	<script src="js/admin.js"></script>
   </body>
-</html>  
-  
-  
+</html>
