--- a/public/views/login.html
+++ b/public/views/login.html
@@ -7,9 +7,10 @@
     <style type="text/css">
 
       h1 {font-size:102px;}
-      #loginBox {height:330px;}
+      .1 {height:350px;}
+      .2 {height:580px;}
       #signup {width: 100px;height:25px}
-      #request {width: 200px;height:30px}
+      #request, #back {width: 200px;height:30px}
 
     </style>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
@@ -20,7 +21,7 @@
     <h1 id="header" class="loginHeader">Yeemazon</h1>
     <div style="margin-top: 50px"></div>
 
-    <div id="loginBox">
+    <div id="loginBox" class="1">
       <br>
       <label>Username</label>
       <div style="margin-top: 10px"></div>
