--- a/public/css/master_style.css
+++ b/public/css/master_style.css
@@ -22,30 +22,29 @@ h1, h2, h3 {font-family:"tahoma";color:#DDD;transition: .3s}
 .toolbarButton {background-color: transparent;background-repeat:no-repeat;border: none;cursor:pointer;overflow: hidden;outline:none;font-family:"tahoma";color:#DDDDDD;font-weight:bold;text-shadow: 3px 3px 6px #000000;transition: .3s;margin-right:10px}
 .toolbarButton:hover {color:#FFF;font-weight:bold;text-shadow: 3px 3px 6px #DDD}
 
-#userGreeting {text-align:left;margin:0 auto;text-shadow:5px 5px 10px #000;color:#DDD;transition: .3s;position: relative;animation: flyInFromBottom 2s 1 ease;}
+#userGreeting {text-align:left;margin:0 auto;text-shadow:5px 5px 10px #000;color:#DDD;transition: .3s;position: relative;animation: flyInFromBottom 1s 1 ease;}
 #userGreeting:hover {text-shadow: 10px 10px 20px #000;}
 
-#toolbar {margin:0 auto;background: rgba(20,20,20, 0.9);width:95%;height:40px;border-radius:10px;text-align:center;display:flex;align-items:center;justify-content:flex-start;position: relative;animation: flyInFromBottom 2s 1 ease;}
-#toolbarRight {margin:0 auto;background: rgba(20,20,20, 0);width:95%;height:40px;border-radius:10px;text-align:center;display:flex;align-items:center;justify-content:flex-end;position: relative;animation: flyInFromBottom 2s 1 ease;}
-#pageback {margin:0 auto;background:rgba(30,30,30, 0.7);width:95%;height:920px;border-radius:10px;text-align:center;position: relative;animation: flyInFromBottom 2s 1 ease;}
-#sessionPageback {margin:0 auto;background:rgba(30,30,30, 0.7);width:95%;height:920px;border-radius:10px;text-align:center;position: relative;animation: flyInFromBottom 2s 1 ease;}
+#toolbar {margin:0 auto;background: rgba(20,20,20, 0.9);width:95%;height:40px;border-radius:10px;text-align:center;display:flex;align-items:center;justify-content:flex-start;position: relative;animation: flyInFromBottom 1s 1 ease;}
+#toolbarRight {margin:0 auto;background: rgba(20,20,20, 0);width:95%;height:40px;border-radius:10px;text-align:center;display:flex;align-items:center;justify-content:flex-end;position: relative;animation: flyInFromBottom 1s 1 ease;}
+#pageback {margin:0 auto;background:rgba(30,30,30, 0.7);width:95%;height:920px;border-radius:10px;text-align:center;position: relative;animation: flyInFromBottom 1s 1 ease;}
+#sessionPageback {margin:0 auto;background:rgba(30,30,30, 0.7);width:95%;height:920px;border-radius:10px;text-align:center;position: relative;animation: flyInFromBottom 1s 1 ease;}
 
-.itemHolder {width:100%;height:230px;background-color:rgba(0,0,0,0.5);margin:0 auto;text-align:center;display: flex;flex-direction: row;justify-content:flex-start;flex-wrap:wrap;position: relative;animation: flyInFromBottom 2s 1 ease;}
+.itemHolder {width:100%;height:230px;background-color:rgba(0,0,0,0.5);margin:0 auto;text-align:center;display: flex;flex-direction: row;justify-content:flex-start;flex-wrap:wrap;position: relative;animation: flyInFromBottom 1s 1 ease;}
 
-.itemLabel {text-align:left;margin:0 auto;text-shadow: 5px 5px 10px #000;margin-left:.8%;position: relative;animation: flyInFromBottom 2s 1 ease;}
+.itemLabel {text-align:left;margin:0 auto;text-shadow: 5px 5px 10px #000;margin-left:.8%;position: relative;animation: flyInFromBottom 1s 1 ease;}
 #search {background-color:#DDD;font-weight:bold;margin-right:5px;margin-left:15px}
 
 /*ACCOUNT ELEMENTS STYLE*/
 
-#accountBox {text-align:center;margin:0 auto;background: rgba(30,30,30, 0.9);width:380px;height:330px;border-radius:10px;position: relative;animation:flyInFromTop 2s 1 ease;}
+#accountBox {text-align:center;margin:0 auto;background: rgba(30,30,30, 0.9);width:380px;border-radius:10px;position: relative;animation:flyInFromTop 1s 1 ease;}
 
 /*ORDERS ELEMENTS STYLE*/
 
-#ordersToolbar {margin:0 auto;background: rgba(20,20,20, 0.9);width:60%;height:40px;border-radius:10px;text-align:center;display:flex;align-items:center;justify-content:space-around;position:relative;animation: flyInFromBottom 2s 1 ease;}
-#ordersPageback {margin:0 auto;background:rgba(30,30,30, 0.7);width:60%;height:500px;border-radius:10px;text-align:center;position:relative;animation: flyInFromBottom 2s 1 ease;}
+#ordersToolbar {margin:0 auto;background: rgba(20,20,20, 0.9);width:95%;height:40px;border-radius:10px;text-align:center;display:flex;align-items:center;justify-content:space-around;position:relative;animation: flyInFromBottom 1s 1 ease;}
+#ordersPageback {margin:0 auto;background:rgba(30,30,30, 0.7);width:95%;height:500px;border-radius:10px;text-align:center;position:relative;animation: flyInFromBottom 1s 1 ease;}
 
 .orderHolder {width:100%;height:400px;background-color:rgba(0,0,0,0.5);margin:0 auto;text-align:center;display: flex;flex-direction: row;justify-content:flex-start;flex-wrap:wrap;}
-
 /*ITEM ELEMENTS STYLE*/
 
 .bigHolder {width:450px;height:350px;background-color:rgba(0,0,0,0.5);margin-left:5%;text-align:center;}
@@ -60,13 +59,13 @@ h1, h2, h3 {font-family:"tahoma";color:#DDD;transition: .3s}
 
 /* SEARCH */
 
-.searchHolder {width:100%;height:360px;background-color:rgba(0,0,0,0.5);margin:0 auto;display: flex;flex-direction: row;justify-content:flex-start;flex-wrap:wrap;text-align:center;position: relative;animation: flyInFromBottom 2s 1 ease;}
-.itemBox {width:14.5%;height:200px;background-color:rgba(0,0,0,0.5);position: relative;animation: flyInFromBottom 2s 1 ease;margin:15px;flex-wrap:wrap;}
-#searchBack {margin:0 auto;background:rgba(30,30,30, 0.7);width:95%;height:510px;border-radius:10px;text-align:center;position: relative;animation: flyInFromBottom 2s 1 ease;}
+.searchHolder {width:100%;height:360px;background-color:rgba(0,0,0,0.5);margin:0 auto;display: flex;flex-direction: row;justify-content:flex-start;flex-wrap:wrap;text-align:center;position: relative;animation: flyInFromBottom 1s 1 ease;}
+.itemBox {width:14.5%;height:200px;background-color:rgba(0,0,0,0.5);position: relative;animation: flyInFromBottom 1s 1 ease;margin:15px;flex-wrap:wrap;}
+#searchBack {margin:0 auto;background:rgba(30,30,30, 0.7);width:95%;height:510px;border-radius:10px;text-align:center;position: relative;animation: flyInFromBottom 1s 1 ease;}
 
 /* ADMIN */
 
-#adminBox {text-align:center;margin:0 auto;background: rgba(30,30,30, 0.9);width:380px;height:560px;border-radius:10px;position: relative;animation:flyInFromTop 2s 1 ease;}
+#adminBox {text-align:center;margin:0 auto;background: rgba(30,30,30, 0.9);width:380px;height:590px;border-radius:10px;position: relative;animation:flyInFromTop 1s 1 ease;}
 
 
 /* ANIMATIONS */
