--- a/public/views/account.html
+++ b/public/views/account.html
@@ -10,12 +10,13 @@
       h2 {font-size:24px;}
       #signup {width: 100px;height:25px}
       .request {width: 200px;height:30px;margin-bottom:20px;}
+      #accountBox {height:200px}
 
     </style>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   </head>
-  
-  <body>  
+
+  <body>
     <div style="margin-top: 5%"></div>
     <h1 id="header" class="loginHeader">Yeemazon</h1>
     <h2 class="loginHeader">Account Details</h2>
@@ -26,15 +27,12 @@
       <label id = "username">Username: %username%</label>
       <div style="margin-top: 10px"></div>
       <label id = "email">Email: %email%</label>
-      <div style="margin-top: 50px"></div>
+      <div style="margin-top: 20px"></div>
 
       <button id="cart" class="request">View Cart</button>
-      <button id="return" class="request">Return to Catalog</button>
       <button id="logout" class="request">Log Out</button>
     </div>
 
   	<script src="js/account.js"></script>
   </body>
-</html>  
-  
-  
+</html>
