--- a/public/views/account.html
+++ b/public/views/account.html
@@ -1,38 +1,55 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Yeemazon - Account</title>
-    <meta charset="utf-8"/>
-    <link rel="stylesheet" href="css/master_style.css">
-    <style type="text/css">
 
-      h1 {font-size:102px;}
-      h2 {font-size:24px;}
-      #signup {width: 100px;height:25px}
-      .request {width: 200px;height:30px;margin-bottom:20px;}
-      #accountBox {height:200px}
+<head>
+  <title>Yeemazon - Account</title>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="css/master_style.css">
+  <style type="text/css">
+    h1 {
+      font-size: 102px;
+    }
 
-    </style>
-    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-  </head>
+    h2 {
+      font-size: 24px;
+    }
 
-  <body>
-    <div style="margin-top: 5%"></div>
-    <h1 id="header" class="loginHeader">Yeemazon</h1>
-    <h2 class="loginHeader">Account Details</h2>
-    <div style="margin-top: 30px"></div>
+    #signup {
+      width: 100px;
+      height: 25px
+    }
 
-    <div id="accountBox">
-      <br>
-      <label id = "username">Username: %username%</label>
-      <div style="margin-top: 10px"></div>
-      <label id = "email">Email: %email%</label>
-      <div style="margin-top: 20px"></div>
+    .request {
+      width: 200px;
+      height: 30px;
+      margin-bottom: 20px;
+    }
 
-      <button id="cart" class="request">View Cart</button>
-      <button id="logout" class="request">Log Out</button>
-    </div>
+    #accountBox {
+      height: 200px
+    }
+  </style>
+  <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+</head>
 
-  	<script src="js/account.js"></script>
-  </body>
+<body>
+  <div style="margin-top: 5%"></div>
+  <h1 id="header" class="loginHeader">Yeemazon</h1>
+  <h2 class="loginHeader">Account Details</h2>
+  <div style="margin-top: 30px"></div>
+
+  <div id="accountBox">
+    <br>
+    <label id="username">Username: %username%</label>
+    <div style="margin-top: 10px"></div>
+    <label id="email">Email: %email%</label>
+    <div style="margin-top: 20px"></div>
+
+    <button id="cart" class="request">View Cart</button>
+    <button id="logout" class="request">Log Out</button>
+  </div>
+
+  <script src="js/account.js"></script>
+</body>
+
 </html>
