--- a/public/views/cart.html
+++ b/public/views/cart.html
@@ -1,36 +1,45 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Yeemazon - Cart</title>
-    <meta charset="utf-8"/>
-    <link rel="stylesheet" href="css/master_style.css">
-    <style type="text/css">
 
-      h1 {font-size:102px;}
-      h2 {font-size:24px;}
-      #request {border-radius:2px;width:50px;}
+<head>
+  <title>Yeemazon - Cart</title>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="css/master_style.css">
+  <style type="text/css">
+    h1 {
+      font-size: 102px;
+    }
 
-    </style>
-    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-  </head>
+    h2 {
+      font-size: 24px;
+    }
 
-  <body>
-    <h1 class="loginHeader" >Yeemazon</h1>
-    <div style="margin-top: 50px"></div>
+    #request {
+      border-radius: 2px;
+      width: 50px;
+    }
+  </style>
+  <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+</head>
 
-    <div id="ordersToolbar">
-      <button id="return" class="toolbarButton">Catalog</button>
-      <button id="account" class="toolbarButton">Account</button>
-      <button id="logout" class="toolbarButton">Log Out</button>
+<body>
+  <h1 class="loginHeader">Yeemazon</h1>
+  <div style="margin-top: 50px"></div>
+
+  <div id="ordersToolbar">
+    <button id="return" class="toolbarButton">Catalog</button>
+    <button id="account" class="toolbarButton">Account</button>
+    <button id="logout" class="toolbarButton">Log Out</button>
+  </div>
+
+  <div id="ordersPageback">
+    <h2 class="itemLabel" style="padding-top:30px;">Your Cart ({NUMBER} Items)</h2>
+    <div style="margin-top: 10px"></div>
+    <div class="orderHolder">
     </div>
+  </div>
 
-    <div id="ordersPageback">
-      <h2 class="itemLabel" style="padding-top:30px;">Your Cart ({NUMBER} Items)</h2>
-      <div style="margin-top: 10px"></div>
-      <div class="orderHolder">
-      </div>
-    </div>
+  <script src="js/cart.js"></script>
+</body>
 
-	  <script src="js/cart.js"></script>
-  </body>
 </html>
