--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,45 +1,60 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Yeemazon - Login</title>
-    <meta charset="utf-8"/>
-    <link rel="stylesheet" href="css/master_style.css">
-    <style type="text/css">
 
-      h1 {font-size:102px;}
-      .1 {height:350px;}
-      .2 {height:580px;}
-      #signup {width: 100px;height:25px}
-      #request, #back {width: 200px;height:30px}
+<head>
+  <title>Yeemazon - Login</title>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="css/master_style.css">
+  <style type="text/css">
+    h1 {
+      font-size: 102px;
+    }
 
-    </style>
-    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-  </head>
-  
-  <body>  
-    <div style="margin-top: 10%"></div>
-    <h1 id="header" class="loginHeader">Yeemazon</h1>
-    <div style="margin-top: 50px"></div>
+    .1 {
+      height: 350px;
+    }
 
-    <div id="loginBox" class="1">
-      <br>
-      <label>Username</label>
-      <div style="margin-top: 10px"></div>
-      <input id="username" type="text" class="loginInput">
-      <div style="margin-top: 30px"></div>
-      <label>Password</label>
-      <div style="margin-top: 10px"></div>
-      <input id="password" type="password" class="loginInput">
-      <div style="margin-top: 25px"></div>
-      <button id="request" class="request">Log In</button>
-      <div style="margin-top: 20px"></div>
-      <label>Don't have an account?</label>
-      <button id="signup" class="request">Sign up!</button>
-      <div style="margin-top: 10px"></div>
-    </div>
+    .2 {
+      height: 580px;
+    }
 
-  	<script src="js/login.js"></script>
-  </body>
-</html>  
-  
-  
+    #signup {
+      width: 100px;
+      height: 25px
+    }
+
+    #request,
+    #back {
+      width: 200px;
+      height: 30px
+    }
+  </style>
+  <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+</head>
+
+<body>
+  <div style="margin-top: 10%"></div>
+  <h1 id="header" class="loginHeader">Yeemazon</h1>
+  <div style="margin-top: 50px"></div>
+
+  <div id="loginBox" class="1">
+    <br>
+    <label>Username</label>
+    <div style="margin-top: 10px"></div>
+    <input id="username" type="text" class="loginInput">
+    <div style="margin-top: 30px"></div>
+    <label>Password</label>
+    <div style="margin-top: 10px"></div>
+    <input id="password" type="password" class="loginInput">
+    <div style="margin-top: 25px"></div>
+    <button id="request" class="request">Log In</button>
+    <div style="margin-top: 20px"></div>
+    <label>Don't have an account?</label>
+    <button id="signup" class="request">Sign up!</button>
+    <div style="margin-top: 10px"></div>
+  </div>
+
+  <script src="js/login.js"></script>
+</body>
+
+</html>
