--- a/public/views/session.html
+++ b/public/views/session.html
@@ -1,54 +1,61 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Yeemazon - Browse</title>
-    <meta charset="utf-8"/>
-    <link rel="stylesheet" href="css/master_style.css">
-    <style type="text/css">
 
-      h1 {font-size:102px;}
-      h2 {font-size:24px;}
-      #request {border-radius:2px;width:50px;}
+<head>
+  <title>Yeemazon - Browse</title>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="css/master_style.css">
+  <style type="text/css">
+    h1 {
+      font-size: 102px;
+    }
 
-    </style>
-    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-  </head>
-  
-  <body>  
-    <h1 class="loginHeader">Yeemazon</h1>
-    <div style="margin-top: 20px"></div>
-    <h2 id="userGreeting" style="margin-left:2.5%">Hello {username}!</h2>
-    <div style="margin-top: 5px"></div>
+    h2 {
+      font-size: 24px;
+    }
 
-    <div id="toolbar">
-      <input id="search" type="text" value="Search for an item">
-      <button id="request" class="request">Go</button>
-        <div id="toolbarRight">
-          <button id="account" class="toolbarButton">Account</button>
-          <button id="cart" class="toolbarButton">Cart</button>
-          <button id="logout" class="toolbarButton">Log Out</button>
-        </div>
+    #request {
+      border-radius: 2px;
+      width: 50px;
+    }
+  </style>
+  <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+</head>
+
+<body>
+  <h1 class="loginHeader">Yeemazon</h1>
+  <div style="margin-top: 20px"></div>
+  <h2 id="userGreeting" style="margin-left:2.5%">Hello {username}!</h2>
+  <div style="margin-top: 5px"></div>
+
+  <div id="toolbar">
+    <input id="search" type="text" value="Search for an item">
+    <button id="request" class="request">Go</button>
+    <div id="toolbarRight">
+      <button id="account" class="toolbarButton">Account</button>
+      <button id="cart" class="toolbarButton">Cart</button>
+      <button id="logout" class="toolbarButton">Log Out</button>
     </div>
+  </div>
 
-    <div id="sessionPageback">
-      <h2 class="itemLabel" style="padding-top:30px">Popular Items</h2>
-      <div style="margin-top: 10px"></div>
-      <div class="itemHolder" id="items1">
-      </div>
-      <div style="margin-top: 30px"></div>
-      <h2 class="itemLabel">Under $20</h2>
-      <div style="margin-top: 10px"></div>
-      <div class="itemHolder" id="items2">
-      </div>
-      <div style="margin-top: 30px"></div>
-      <h2 class="itemLabel">Mr. Yee's Picks</h2>
-      <div style="margin-top: 10px"></div>
-      <div class="itemHolder" id="items3">
-      </div>       
+  <div id="sessionPageback">
+    <h2 class="itemLabel" style="padding-top:30px">Popular Items</h2>
+    <div style="margin-top: 10px"></div>
+    <div class="itemHolder" id="items1">
     </div>
+    <div style="margin-top: 30px"></div>
+    <h2 class="itemLabel">Under $20</h2>
+    <div style="margin-top: 10px"></div>
+    <div class="itemHolder" id="items2">
+    </div>
+    <div style="margin-top: 30px"></div>
+    <h2 class="itemLabel">Mr. Yee's Picks</h2>
+    <div style="margin-top: 10px"></div>
+    <div class="itemHolder" id="items3">
+    </div>
+  </div>
 
-	  <script src="js/session.js"></script>
-  </body>
-</html>  
-  
-  
+  <script src="js/session.js"></script>
+</body>
+
+</html>
