--- a/public/css/master_style.css
+++ b/public/css/master_style.css
@@ -1,81 +1,395 @@
-body {background-image: url('background.gif');background-repeat: no-repeat;height:100%;width:100%}
-label {font-family:"tahoma";color:#DDD;font-weight:bold;text-shadow: 3px 3px 6px #000;transition: .3s;}
-label:hover {color:#FFF;font-weight:bold;text-shadow: 3px 3px 6px #DDD}
-h1, h2, h3 {font-family:"tahoma";color:#DDD;transition: .3s}
+body {
+  background-image: url('background.gif');
+  background-repeat: no-repeat;
+  background-size: cover
+}
+
+label {
+  font-family: "tahoma";
+  color: #DDD;
+  font-weight: bold;
+  text-shadow: 3px 3px 6px #000;
+  transition: .3s;
+}
+
+label:hover {
+  color: #FFF;
+  font-weight: bold;
+  text-shadow: 3px 3px 6px #DDD
+}
+
+h1, h2, h3 {
+  font-family: "tahoma";
+  color: #DDD;
+  transition: .3s
+}
 
 /*SPECIFIC LOGIN ELEMENTS STYLE*/
 
-.request, .back {font-weight:bold;border:0;text-align: center;overflow:hidden;transition: .3s;background-color: #DDD;text-decoration: none;overflow: hidden;border-radius:4px}
-.request:active:after, .back:active:after {padding: 0;margin: 0;opacity: 1;}
-.request:hover, .back:hover {background:#FFF;box-shadow:0px 0px 10px 5px #97B1BF;color:#000;}
-.request:after, .back:after {content: "";background: #F1C40F;display: block;position: absolute;margin-left: -20px;opacity: 0;}
+.request, .back {
+  font-weight: bold;
+  border: 0;
+  text-align: center;
+  overflow: hidden;
+  transition: .3s;
+  background-color: #DDD;
+  text-decoration: none;
+  overflow: hidden;
+  border-radius: 4px
+}
 
-.loginInput {width: 300px;height: 50px;text-align:center;font-size:24px;background-color:#DDD;font-weight:bold;}
+.request:active:after, .back:active:after {
+  padding: 0;
+  margin: 0;
+  opacity: 1;
+}
 
-#loginBox {text-align:center;margin:0 auto;background: rgba(30,30,30, 0.7);width:350px;border-radius:10px;position: relative;animation: flyInFromTop 1s 1 ease;padding-bottom:10px;}
+.request:hover, .back:hover {
+  background: #FFF;
+  box-shadow: 0px 0px 10px 5px #97B1BF;
+  color: #000;
+}
 
-.loginHeader {text-align:center;margin:0 auto;text-shadow: 5px 5px 10px #000;position: relative;animation: flyInFromTop 2s 1 ease;}
-.loginHeader:hover {text-shadow: 10px 10px 20px #000}
+.request:after, .back:after {
+  content: "";
+  background: #F1C40F;
+  display: block;
+  position: absolute;
+  margin-left: -20px;
+  opacity: 0;
+}
+
+.loginInput {
+  width: 300px;
+  height: 50px;
+  text-align: center;
+  font-size: 24px;
+  background-color: #DDD;
+  font-weight: bold;
+}
+
+#loginBox {
+  text-align: center;
+  margin: 0 auto;
+  background: rgba(30, 30, 30, 0.7);
+  width: 350px;
+  border-radius: 10px;
+  position: relative;
+  animation: flyInFromTop 1s 1 ease;
+  padding-bottom: 10px;
+}
+
+.loginHeader {
+  text-align: center;
+  margin: 0 auto;
+  text-shadow: 5px 5px 10px #000;
+  position: relative;
+  animation: flyInFromTop 2s 1 ease;
+}
+
+.loginHeader:hover {
+  text-shadow: 10px 10px 20px #000
+}
 
 /*SESSION HOME PAGE SPECIFIC ELEMENTS STYLE*/
 
-.toolbarButton {background-color: transparent;background-repeat:no-repeat;border: none;cursor:pointer;overflow: hidden;outline:none;font-family:"tahoma";color:#DDDDDD;font-weight:bold;text-shadow: 3px 3px 6px #000000;transition: .3s;margin-right:10px}
-.toolbarButton:hover {color:#FFF;font-weight:bold;text-shadow: 3px 3px 6px #DDD}
+.toolbarButton {
+  background-color: transparent;
+  background-repeat: no-repeat;
+  border: none;
+  cursor: pointer;
+  overflow: hidden;
+  outline: none;
+  font-family: "tahoma";
+  color: #DDDDDD;
+  font-weight: bold;
+  text-shadow: 3px 3px 6px #000000;
+  transition: .3s;
+  margin-right: 10px
+}
 
-#userGreeting {text-align:left;margin:0 auto;text-shadow:5px 5px 10px #000;color:#DDD;transition: .3s;position: relative;animation: flyInFromBottom 1s 1 ease;}
-#userGreeting:hover {text-shadow: 10px 10px 20px #000;}
+.toolbarButton:hover {
+  color: #FFF;
+  font-weight: bold;
+  text-shadow: 3px 3px 6px #DDD
+}
 
-#toolbar {margin:0 auto;background: rgba(20,20,20, 0.9);width:95%;height:40px;border-radius:10px;text-align:center;display:flex;align-items:center;justify-content:flex-start;position: relative;animation: flyInFromBottom 1s 1 ease;}
-#toolbarRight {margin:0 auto;background: rgba(20,20,20, 0);width:95%;height:40px;border-radius:10px;text-align:center;display:flex;align-items:center;justify-content:flex-end;position: relative;animation: flyInFromBottom 1s 1 ease;}
-#pageback {margin:0 auto;background:rgba(30,30,30, 0.7);width:95%;height:920px;border-radius:10px;text-align:center;position: relative;animation: flyInFromBottom 1s 1 ease;}
-#sessionPageback {margin:0 auto;background:rgba(30,30,30, 0.7);width:95%;height:920px;border-radius:10px;text-align:center;position: relative;animation: flyInFromBottom 1s 1 ease;}
+#userGreeting {
+  text-align: left;
+  margin: 0 auto;
+  text-shadow: 5px 5px 10px #000;
+  color: #DDD;
+  transition: .3s;
+  position: relative;
+  animation: flyInFromBottom 1s 1 ease;
+}
 
-.itemHolder {width:100%;height:230px;background-color:rgba(0,0,0,0.5);margin:0 auto;text-align:center;display: flex;flex-direction: row;justify-content:flex-start;flex-wrap:wrap;position: relative;animation: flyInFromBottom 1s 1 ease;}
+#userGreeting:hover {
+  text-shadow: 10px 10px 20px #000;
+}
 
-.itemLabel {text-align:left;margin:0 auto;text-shadow: 5px 5px 10px #000;margin-left:.8%;position: relative;animation: flyInFromBottom 1s 1 ease;}
-#search {background-color:#DDD;font-weight:bold;margin-right:5px;margin-left:15px}
+#toolbar {
+  margin: 0 auto;
+  background: rgba(20, 20, 20, 0.9);
+  width: 95%;
+  height: 40px;
+  border-radius: 10px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  position: relative;
+  animation: flyInFromBottom 1s 1 ease;
+}
+
+#toolbarRight {
+  margin: 0 auto;
+  background: rgba(20, 20, 20, 0);
+  width: 95%;
+  height: 40px;
+  border-radius: 10px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  position: relative;
+  animation: flyInFromBottom 1s 1 ease;
+}
+
+#pageback {
+  margin: 0 auto;
+  background: rgba(30, 30, 30, 0.7);
+  width: 95%;
+  height: 920px;
+  border-radius: 10px;
+  text-align: center;
+  position: relative;
+  animation: flyInFromBottom 1s 1 ease;
+}
+
+#sessionPageback {
+  margin: 0 auto;
+  background: rgba(30, 30, 30, 0.7);
+  width: 95%;
+  height: 920px;
+  border-radius: 10px;
+  text-align: center;
+  position: relative;
+  animation: flyInFromBottom 1s 1 ease;
+}
+
+.itemHolder {
+  width: 100%;
+  height: 230px;
+  background-color: rgba(0, 0, 0, 0.5);
+  margin: 0 auto;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  position: relative;
+  animation: flyInFromBottom 1s 1 ease;
+}
+
+.itemLabel {
+  text-align: left;
+  margin: 0 auto;
+  text-shadow: 5px 5px 10px #000;
+  margin-left: .8%;
+  position: relative;
+  animation: flyInFromBottom 1s 1 ease;
+}
+
+#search {
+  background-color: #DDD;
+  font-weight: bold;
+  margin-right: 5px;
+  margin-left: 15px
+}
 
 /*ACCOUNT ELEMENTS STYLE*/
 
-#accountBox {text-align:center;margin:0 auto;background: rgba(30,30,30, 0.9);width:380px;border-radius:10px;position: relative;animation:flyInFromTop 1s 1 ease;}
+#accountBox {
+  text-align: center;
+  margin: 0 auto;
+  background: rgba(30, 30, 30, 0.9);
+  width: 380px;
+  border-radius: 10px;
+  position: relative;
+  animation: flyInFromTop 1s 1 ease;
+}
 
 /*ORDERS ELEMENTS STYLE*/
 
-#ordersToolbar {margin:0 auto;background: rgba(20,20,20, 0.9);width:95%;height:40px;border-radius:10px;text-align:center;display:flex;align-items:center;justify-content:space-around;position:relative;animation: flyInFromBottom 1s 1 ease;}
-#ordersPageback {margin:0 auto;background:rgba(30,30,30, 0.7);width:95%;height:500px;border-radius:10px;text-align:center;position:relative;animation: flyInFromBottom 1s 1 ease;}
+#ordersToolbar {
+  margin: 0 auto;
+  background: rgba(20, 20, 20, 0.9);
+  width: 95%;
+  height: 40px;
+  border-radius: 10px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  position: relative;
+  animation: flyInFromBottom 1s 1 ease;
+}
 
-.orderHolder {width:100%;height:400px;background-color:rgba(0,0,0,0.5);margin:0 auto;text-align:center;display: flex;flex-direction: row;justify-content:flex-start;flex-wrap:wrap;}
+#ordersPageback {
+  margin: 0 auto;
+  background: rgba(30, 30, 30, 0.7);
+  width: 95%;
+  height: 500px;
+  border-radius: 10px;
+  text-align: center;
+  position: relative;
+  animation: flyInFromBottom 1s 1 ease;
+}
+
+.orderHolder {
+  width: 100%;
+  height: 400px;
+  background-color: rgba(0, 0, 0, 0.5);
+  margin: 0 auto;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+
 /*ITEM ELEMENTS STYLE*/
 
-.bigHolder {width:450px;height:350px;background-color:rgba(0,0,0,0.5);margin-left:5%;text-align:center;}
-.infoHolder {width:340px;height:270px;background-color:rgba(0,0,0,0.5);margin-left:105%;text-align:left;}
+.bigHolder {
+  width: 450px;
+  height: 350px;
+  background-color: rgba(0, 0, 0, 0.5);
+  margin-left: 5%;
+  text-align: center;
+}
 
-#holder {background-size:300px 300px; background-repeat: no-repeat; background-position: center; }
+.infoHolder {
+  width: 340px;
+  height: 270px;
+  background-color: rgba(0, 0, 0, 0.5);
+  margin-left: 105%;
+  text-align: left;
+}
 
-.bigButton {width:340px;height:50px;background-color: #DDD;margin-left:105%;margin-top:6%;background-repeat:no-repeat;border: none;cursor:pointer;overflow: hidden;outline:none;color:rgba(30,30,30,1);font-size:30px;font-family:"tahoma";font-weight:bold;text-shadow: 3px 3px 6px #000000;transition: .3s;margin-right:10px}
-.bigButton:active:after {padding: 0;margin: 0;opacity: 1;}
-.bigButton:hover{background:#FFF;box-shadow:0px 0px 10px 5px #97B1BF;color:#000;}
-.bigButton:after {content: "";background: #F1C40F;display: block;position: absolute;margin-left: -20px;opacity: 0;}
+#holder {
+  background-size: 300px 300px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.bigButton {
+  width: 340px;
+  height: 50px;
+  background-color: #DDD;
+  margin-left: 105%;
+  margin-top: 6%;
+  background-repeat: no-repeat;
+  border: none;
+  cursor: pointer;
+  overflow: hidden;
+  outline: none;
+  color: rgba(30, 30, 30, 1);
+  font-size: 30px;
+  font-family: "tahoma";
+  font-weight: bold;
+  text-shadow: 3px 3px 6px #000000;
+  transition: .3s;
+  margin-right: 10px
+}
+
+.bigButton:active:after {
+  padding: 0;
+  margin: 0;
+  opacity: 1;
+}
+
+.bigButton:hover {
+  background: #FFF;
+  box-shadow: 0px 0px 10px 5px #97B1BF;
+  color: #000;
+}
+
+.bigButton:after {
+  content: "";
+  background: #F1C40F;
+  display: block;
+  position: absolute;
+  margin-left: -20px;
+  opacity: 0;
+}
 
 /* SEARCH */
 
-.searchHolder {width:100%;height:360px;background-color:rgba(0,0,0,0.5);margin:0 auto;display: flex;flex-direction: row;justify-content:flex-start;flex-wrap:wrap;text-align:center;position: relative;animation: flyInFromBottom 1s 1 ease;}
-.itemBox {width:14.5%;height:200px;background-color:rgba(0,0,0,0.5);position: relative;animation: flyInFromBottom 1s 1 ease;margin:15px;flex-wrap:wrap;}
-#searchBack {margin:0 auto;background:rgba(30,30,30, 0.7);width:95%;height:510px;border-radius:10px;text-align:center;position: relative;animation: flyInFromBottom 1s 1 ease;}
+.searchHolder {
+  width: 100%;
+  height: 360px;
+  background-color: rgba(0, 0, 0, 0.5);
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  text-align: center;
+  position: relative;
+  animation: flyInFromBottom 1s 1 ease;
+}
+
+.itemBox {
+  width: 14.5%;
+  height: 200px;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: relative;
+  animation: flyInFromBottom 1s 1 ease;
+  margin: 15px;
+  flex-wrap: wrap;
+}
+
+#searchBack {
+  margin: 0 auto;
+  background: rgba(30, 30, 30, 0.7);
+  width: 95%;
+  height: 510px;
+  border-radius: 10px;
+  text-align: center;
+  position: relative;
+  animation: flyInFromBottom 1s 1 ease;
+}
 
 /* ADMIN */
 
-#adminBox {text-align:center;margin:0 auto;background: rgba(30,30,30, 0.9);width:380px;height:590px;border-radius:10px;position: relative;animation:flyInFromTop 1s 1 ease;}
-
+#adminBox {
+  text-align: center;
+  margin: 0 auto;
+  background: rgba(30, 30, 30, 0.9);
+  width: 380px;
+  height: 590px;
+  border-radius: 10px;
+  position: relative;
+  animation: flyInFromTop 1s 1 ease;
+}
 
 /* ANIMATIONS */
 
 @keyframes flyInFromTop {
-    from {bottom: 500px;}
-    to {bottom: 0px;}
+  from {
+    bottom: 500px;
+  }
+  to {
+    bottom: 0px;
+  }
 }
 
 @keyframes flyInFromBottom {
-    from {top: 1500px;}
-    to {top: 0px;}
+  from {
+    top: 1500px;
+  }
+  to {
+    top: 0px;
+  }
 }
