--- a/public/css/master_style.css
+++ b/public/css/master_style.css
@@ -1,6 +1,5 @@
 body {
-  background-image: url('background.gif');
-  background-repeat: no-repeat;
+  background-image: url('index.jpg');
   background-size: cover
 }
 
