--- a/public/views/item.html
+++ b/public/views/item.html
@@ -33,7 +33,7 @@
     <button id="logout" class="toolbarButton">Log Out</button>
   </div>
 
-  <div id="ordersPageback">
+  <div id="itemPageback">
     <h2 id="name" class="itemLabel" style="padding-top:30px;padding-left:40px">%ITEM%</h2>
     <div style="margin-top: 30px"></div>
     <div id="holder" class="bigHolder">
