--- a/public/views/account.html
+++ b/public/views/account.html
@@ -35,7 +35,7 @@
 <body>
   <div style="margin-top: 5%"></div>
   <h1 id="header" class="loginHeader">Yeemazon</h1>
-  <h2 class="loginHeader">Account Details</h2>
+  <h2 class="loginExtra">Account Details</h2>
   <div style="margin-top: 30px"></div>
 
   <div id="accountBox">
