Remove local images, add URL support, "all items" section, migrate all CSS to style sheet and not in HTML files

--- a/public/views/login.html
+++ b/public/views/login.html
@@ -4,25 +4,8 @@
 <head>
   <title>Yeemazon - Login</title>
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="css/master_style.css">
+  <link rel="stylesheet" href="css/style.css">
   <style type="text/css">
-    h1 {
-      font-size: 102px;
-    }
-
-    .1 {
-      height: 350px;
-    }
-
-    .2 {
-      height: 580px;
-    }
-
-    #signup {
-      width: 100px;
-      height: 25px
-    }
-
     #request,
     #back {
       width: 200px;
