--- a/public/views/account.html
+++ b/public/views/account.html
@@ -4,29 +4,12 @@
 <head>
   <title>Yeemazon - Account</title>
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="css/master_style.css">
+  <link rel="stylesheet" href="css/style.css">
   <style type="text/css">
-    h1 {
-      font-size: 102px;
-    }
-
-    h2 {
-      font-size: 24px;
-    }
-
-    #signup {
-      width: 100px;
-      height: 25px
-    }
-
     .request {
       width: 200px;
       height: 30px;
       margin-bottom: 20px;
-    }
-
-    #accountBox {
-      height: 200px
     }
   </style>
   <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
