--- a/public/views/session.html
+++ b/public/views/session.html
@@ -4,16 +4,8 @@
 <head>
   <title>Yeemazon - Browse</title>
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="css/master_style.css">
+  <link rel="stylesheet" href="css/style.css">
   <style type="text/css">
-    h1 {
-      font-size: 102px;
-    }
-
-    h2 {
-      font-size: 24px;
-    }
-
     #request {
       border-radius: 2px;
       width: 50px;
@@ -52,6 +44,11 @@
     <h2 class="itemLabel">Mr. Yee's Picks</h2>
     <div style="margin-top: 10px"></div>
     <div class="itemHolder" id="items3">
+    </div>
+    <div style="margin-top: 100px"></div>
+    <h2 class="itemLabel">All Items</h2>
+    <div style="margin-top: 10px"></div>
+    <div class="itemCont" id="items4">
     </div>
   </div>
 
