User greeting slides

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -491,11 +491,29 @@ h3 {
 }
 
 @keyframes shrink {
-   from {width: 95%;}
-   to {width:900px;}
+   from {
+     width: 95%;
+   }
+   to {
+     width:900px;
+   }
 }
 
 @keyframes grow {
-   from {width: 900px;}
-   to {width:95%;}
+   from {
+     width: 900px;
+   }
+   to {
+     width:95%;
+   }
+}
+
+@keyframes slideAcross {
+    from {transform: translateX(0px);}
+    to {transform: translateX(465px);}
+}
+
+@keyframes slideBack {
+    from {transform: translateX(465px);}
+    to {transform: translateX(0px);}
 }
