Lobby system and creation works. You can see the lobbies youre in with developer tools

--- a/public/views/lobbyFinder.html
+++ b/public/views/lobbyFinder.html
@@ -31,10 +31,12 @@
   </div>
 
   <div id="sessionPageback">
-
+    <label >Create lobby with</label>
+    <input id = "users" type = "text" value = ""></input> <br><br>
+    <input id = "createLobby" class="toolbarButton" type = "button" value = "Create"></input>
   </div>
 
-  <script src = "js/newMessage.js"></script>
+  <script src = "js/lobbyFinder.js"></script>
 
 </body>
 
