--- a/public/views/session.html
+++ b/public/views/session.html
@@ -52,7 +52,7 @@
     </div>
   </div>
 
-  <script src="external/session.js"></script>
+  <script src="js/session.js"></script>
 </body>
 
 </html>
