Chat implemented, click on the text, this chat box is live
-Live Chat
-Independant Lobbies
-Efficient new message check and add

--- a/public/views/lobby.html
+++ b/public/views/lobby.html
@@ -31,18 +31,16 @@
   </div>
 
   <div id="sessionPageback">
-    <label >Create lobby with</label>
-    <input id = "users" type = "text" value = ""></input> <br><br>
-    <label >Name the lobby</label>
-    <input id = "name" type = "text" value = ""></input> <br><br>
-    <input id = "createLobby" class="toolbarButton" type = "button" value = "Create"></input> <br><br>
-
     <ul id = "list">
 
     </ul>
+    <br>
+    <label>Enter message</label>
+    <input id = "message" type = "text"></input>
+    <input id = "sendMessage" type = "button" value = "Send"></input>
   </div>
 
-  <script src = "js/lobbyFinder.js"></script>
+  <script src = "js/lobby.js"></script>
 
 </body>
 
