--- a/public/views/lobby.html
+++ b/public/views/lobby.html
@@ -37,7 +37,14 @@
     <br>
     <label>Enter message</label>
     <input id = "message" type = "text"></input>
-    <input id = "sendMessage" type = "button" value = "Send"></input>
+    <input id = "sendMessage" type = "button" value = "Send"></input><br><br>
+
+    <label>Invite User</label>
+    <input id = "user" type = "text"></input>
+    <input id = "sendInvite" type = "button" value = "Invite"></input><br><br>
+
+    <label>Delete lobby</label>
+    <input id = "deleteLobby" type = "button" value = "Delete"></input>
   </div>
 
   <script src = "js/lobby.js"></script>
