Leave lobby option added

--- a/public/views/lobby.html
+++ b/public/views/lobby.html
@@ -44,7 +44,10 @@
     <input id = "sendInvite" type = "button" value = "Invite"></input><br><br>
 
     <label>Delete lobby</label>
-    <input id = "deleteLobby" type = "button" value = "Delete"></input>
+    <input id = "deleteLobby" type = "button" value = "Delete"></input> <br><br>
+
+    <label>Leave lobby</label>
+    <input id = "leaveLobby" type = "button" value = "Leave"></input>
   </div>
 
   <script src = "js/lobby.js"></script>
