userInfo has been moved externally
-Just reference it in the html file and the server will do the rest

--- a/public/views/account.html
+++ b/public/views/account.html
@@ -31,7 +31,7 @@
     <button id="cart" class="request">View Cart</button>
     <button id="logout" class="request">Log Out</button>
   </div>
-
+  <script src="js/userInfo.js"></script>
   <script src="js/account.js"></script>
 </body>
 
