--- a/public/views/lobby.html
+++ b/public/views/lobby.html
@@ -49,7 +49,7 @@
     <label>Leave lobby</label>
     <input id = "leaveLobby" type = "button" value = "Leave"></input>
   </div>
-
+  <script src="js/userInfo.js"></script>
   <script src = "js/lobby.js"></script>
 
 </body>
