--- a/public/views/login.html
+++ b/public/views/login.html
@@ -36,7 +36,8 @@
     <button id="signup" class="request">Sign up!</button>
     <div style="margin-top: 10px"></div>
   </div>
-
+  
+  <script src="js/userInfo.js"></script>
   <script src="js/login.js"></script>
 </body>
 
