Permissions request added, mike i need signup to work again

--- a/public/views/lobbyFinder.html
+++ b/public/views/lobbyFinder.html
@@ -40,6 +40,11 @@
     <ul id = "list">
 
     </ul>
+    <label >Request permission</label>
+    <select id = "perm">
+
+    </select>
+    <input id = "requestPermission" class="toolbarButton" type = "button" value = "Request"></input> <br><br>
   </div>
   <script src="js/userInfo.js"></script>
   <script src = "js/lobbyFinder.js"></script>
