Permission level now shown in account html

--- a/public/views/account.html
+++ b/public/views/account.html
@@ -27,6 +27,8 @@
     <div style="margin-top: 10px"></div>
     <label id="email">Email: %email%</label>
     <div style="margin-top: 20px"></div>
+    <label id="perm">Permission: %permission%</label>
+    <div style="margin-top: 20px"></div>
 
     <button id="cart" class="request">View Cart</button>
     <button id="logout" class="request">Log Out</button>
