--- a/public/views/lobby.html
+++ b/public/views/lobby.html
@@ -24,6 +24,7 @@
     <input id="search" type="text" value="Search for an item">
     <button id="request" class="request">Go</button>
     <div id="toolbarRight">
+      <button id="messages" class="toolbarButton">Messages</button>
       <button id="account" class="toolbarButton">Account</button>
       <button id="cart" class="toolbarButton">Cart</button>
       <button id="logout" class="toolbarButton">Log Out</button>
@@ -49,6 +50,7 @@
     <label>Leave lobby</label>
     <input id = "leaveLobby" type = "button" value = "Leave"></input>
   </div>
+  <script src="js/toolbar.js"></script>
   <script src="js/userInfo.js"></script>
   <script src = "js/lobby.js"></script>
 
