--- a/public/views/session.html
+++ b/public/views/session.html
@@ -53,6 +53,7 @@
     </div>
   </div>
 
+  <script src="js/toolbar.js"></script>
   <script src="js/userInfo.js"></script>
   <script src="js/session.js"></script>
 
