--- a/public/views/lobby.html
+++ b/public/views/lobby.html
@@ -10,6 +10,9 @@
       border-radius: 2px;
       width: 50px;
     }
+    body {
+      background:cover no-repeat;
+    }
   </style>
   <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 </head>
