--- a/public/views/search.html
+++ b/public/views/search.html
@@ -18,6 +18,10 @@
       font-size: 14px;
     }
 
+    body {
+        background-size: cover no-repeat
+    }
+
     #request {
       border-radius: 2px;
       width: 50px;
