--- a/public/views/account.html
+++ b/public/views/account.html
@@ -11,6 +11,10 @@
       height: 30px;
       margin-bottom: 20px;
     }
+
+    body {
+      background: cover;
+    }
   </style>
   <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 </head>
