Permission request moved to account view
- Permission request moved to account view
- Lobbies now get deleted if everyone leaves
- Style changes to account view

--- a/public/views/account.html
+++ b/public/views/account.html
@@ -35,7 +35,13 @@
     <div style="margin-top: 20px"></div>
 
     <button id="cart" class="request">View Cart</button>
-    <button id="logout" class="request">Log Out</button>
+    <button id="logout" class="request">Log Out</button><br><br>
+
+    <label >Permission: </label>
+    <select id = "perm2">
+
+    </select><br><br>
+    <button id = "requestPermission" class="request">Request</button>
   </div>
   <script src="js/userInfo.js"></script>
   <script src="js/account.js"></script>
