--- a/public/views/cart.html
+++ b/public/views/cart.html
@@ -28,7 +28,9 @@
 
 <body>
   <h1 class="loginHeader">Yeemazon</h1>
-  <div style="margin-top: 50px"></div>
+  <div style="margin-top: 20px"></div>
+  <h2 id="userGreeting" style="margin-left:2.5%">Hello {username}!</h2>
+  <div style="margin-top: 5px"></div>
 
   <div id="toolbar">
     <input id="search" type="text" value="Search for an item">
@@ -48,6 +50,7 @@
     </div>
   </div>
 
+  <script src="js/userInfo.js"></script>
   <script src="js/toolbar.js"></script>
   <script src="js/cart.js"></script>
 </body>
