Items can now be ordered and by quantity

--- a/public/views/cart.html
+++ b/public/views/cart.html
@@ -13,6 +13,11 @@
     h2 {
       font-size: 24px;
     }
+    .request {
+      width: 200px;
+      height: 30px;
+      margin-bottom: 20px;
+    }
 
     #request {
       border-radius: 2px;
@@ -45,6 +50,7 @@
 
   <div id="ordersPageback">
     <h2 class="itemLabel" style="padding-top:30px;">Your Cart ({NUMBER} Items)</h2>
+    <button id = "order" class="request">Order</button>
     <div style="margin-top: 10px"></div>
     <div class="orderHolder">
     </div>
