Message the creator of an item, fixed style on item view page

--- a/public/views/item.html
+++ b/public/views/item.html
@@ -50,9 +50,16 @@
         <div style="margin-top: 40px"></div><label id="itemClick" style="margin-left:15px">%INFO%</label>
         <div style="margin-top: 10px"></div><label id="itemClickNum" style="margin-left:15px">%INFO%</label>
         <div style="margin-top: 10px"></div><label id="itemOrders" style="margin-left:15px">%INFO%</label>
-        <div style="margin-top: 10px"></div><label id="itemID" style="margin-left:15px">%ID%</label></div><button id="addToCart" class="bigButton">ADD TO CART</button></div>
-  </div>
+        <div style="margin-top: 10px"></div><label id="itemID" style="margin-left:15px">%ID%</label>
+        <div style="margin-top: 10px"></div><label id="creator" style="margin-left:15px">%Creator%</label></div>
 
+    </div>
+    <div>
+      <button id="addToCart" class="bigButton">ADD TO CART</button>
+      <button id="msg" class="bigButton">Message the creator</button>
+    </div>
+  </div>
+  <script src="js/userInfo.js"></script>
   <script src="js/toolbar.js"></script>
   <script src="js/item.js"></script>
 </body>
