--- a/public/css/style.css
+++ b/public/css/style.css
@@ -366,7 +366,7 @@ h3 {
 
 .infoHolder {
   width: 340px;
-  height: 270px;
+  height: 350px;
   background-color: rgba(0, 0, 0, 0.5);
   margin-left: 105%;
   text-align: left;
@@ -382,8 +382,8 @@ h3 {
   width: 340px;
   height: 50px;
   background-color: #DDD;
-  margin-left: 105%;
-  margin-top: 6%;
+  /*margin-left: 15%;*/
+  margin-top: 1%;
   background-repeat: no-repeat;
   border: none;
   cursor: pointer;
