--- a/public/views/item.html
+++ b/public/views/item.html
@@ -55,8 +55,8 @@
 
     </div>
     <div>
-      <button id="addToCart" class="bigButton">ADD TO CART</button>
-      <button id="msg" class="bigButton">Message the creator</button>
+      <button id="addToCart" class="bigButton">Add to Cart</button>
+      <button id="msg" class="bigButton">Message the Creator</button>
     </div>
   </div>
   <script src="js/userInfo.js"></script>
