--- a/public/views/lobbyFinder.html
+++ b/public/views/lobbyFinder.html
@@ -17,7 +17,7 @@
 <body>
   <h1 class="loginHeader">Yeemazon</h1>
   <div style="margin-top: 20px"></div>
-  <h2 id="userGreeting" style="margin-left:2.5%">Hello {username}!</h2>
+  <h2 id="userGreeting" style="margin-left:12.5%">Hello {username}!</h2>
   <div style="margin-top: 5px"></div>
 
   <div id="toolbar">
@@ -32,12 +32,16 @@
   </div>
 
   <div id="sessionPageback">
-    <label >Create lobby with</label>
+    <br>
+    <label >Create lobby with (input usernames): </label>
     <input id = "users" type = "text" value = ""></input> <br><br>
-    <label >Name the lobby</label>
+    <label >Lobby Name: </label>
     <input id = "name" type = "text" value = ""></input> <br><br>
-    <input id = "createLobby" class="toolbarButton" type = "button" value = "Create"></input> <br><br>
+    <input id = "createLobby" class="toolbarButton" type = "button" value = "Create Lobby"></input> <br><br>
 
+    <br>
+    <label style="font-size:40px">Existing Lobbies </label>
+    <br>
     <ul id = "list">
 
     </ul>
