--- a/public/views/session.html
+++ b/public/views/session.html
@@ -11,7 +11,7 @@
       width: 50px;
     }
     body {
-      background-size: cover no-repeat
+      background-size: cover no-repeat;
     }
   </style>
   <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
@@ -20,7 +20,7 @@
 <body>
   <h1 class="loginHeader">Yeemazon</h1>
   <div style="margin-top: 20px"></div>
-  <h2 id="userGreeting" style="margin-left:2.5%">Hello {username}!</h2>
+  <h2 id="userGreeting" style="margin-left:12.5%">Hello {username}!</h2>
   <div style="margin-top: 5px"></div>
 
   <div id="toolbar">
