--- a/public/views/search.html
+++ b/public/views/search.html
@@ -40,6 +40,7 @@
     <input id="search" type="text" value="Search for an item">
     <button id="request" class="request">Go</button>
     <div id="toolbarRight">
+      <button id="ProductMan" class="toolbarButton">Products</button>
       <button id="messages" class="toolbarButton">Messages</button>
       <button id="account" class="toolbarButton">Account</button>
       <button id="cart" class="toolbarButton">Cart</button>
