--- a/public/views/lobby.html
+++ b/public/views/lobby.html
@@ -36,23 +36,22 @@
   </div>
 
   <div id="sessionPageback">
-    <ul id = "list">
 
-    </ul>
     <br>
     <label>Enter message</label>
     <input id = "message" type = "text"></input>
-    <input id = "sendMessage" type = "button" value = "Send"></input><br><br>
+    <input id = "sendMessage" class="lobbyButton" type = "button" value = "Send"></input><br><br>
 
     <label>Invite User</label>
     <input id = "user" type = "text"></input>
-    <input id = "sendInvite" type = "button" value = "Invite"></input><br><br>
+    <input id = "sendInvite" class="lobbyButton" type = "button" value = "Invite"></input><br><br>
 
-    <label>Delete lobby</label>
-    <input id = "deleteLobby" type = "button" value = "Delete"></input> <br><br>
+    <input id = "deleteLobby" class="lobbyButton" type = "button" value = "Delete Lobby"></input>
+    <input id = "leaveLobby" class="lobbyButton" type = "button" value = "Leave Lobby"></input>
+<div style="margin-top: 20px"></div>
+    <ul id = "list">
 
-    <label>Leave lobby</label>
-    <input id = "leaveLobby" type = "button" value = "Leave"></input>
+    </ul>
   </div>
   <script src="js/toolbar.js"></script>
   <script src="js/userInfo.js"></script>
