--- a/public/views/itemCRUD.html
+++ b/public/views/itemCRUD.html
@@ -19,13 +19,12 @@
   <body>
     <h1 class="loginHeader">Yeemazon</h1>
     <div style="margin-top: 20px"></div>
-    <h2 id="userGreeting" style="margin-left:12.5%">Hello {username}!</h2>
-    <div style="margin-top: 5px"></div>
 
-    <div id="toolbar">
+    <div id="crudToolbar">
       <input id="search" type="text" value="Search for an item">
       <button id="request" class="request">Go</button>
       <div id="toolbarRight">
+        <button id="ProductMan" class="toolbarButton">Products</button>
         <button id="messages" class="toolbarButton">Messages</button>
         <button id="account" class="toolbarButton">Account</button>
         <button id="cart" class="toolbarButton">Cart</button>
@@ -33,9 +32,8 @@
       </div>
     </div>
 
-    <div id="sessionPageback">
-
-      <div id = "which">
+    <div id="crudPageback">
+      <div id = "which" style="padding-top:20px">
         <input type="radio" id="contactChoice1"
          name="radioName" value="Add Item" checked>
         <label for="contactChoice1">Add Item</label>
