--- a/public/views/lobbyFinder.html
+++ b/public/views/lobbyFinder.html
@@ -16,11 +16,9 @@
 
 <body>
   <h1 class="loginHeader">Yeemazon</h1>
-  <div style="margin-top: 20px"></div>
-  <h2 id="userGreeting" style="margin-left:12.5%">Hello {username}!</h2>
-  <div style="margin-top: 5px"></div>
+  <div style="margin-top: 25px"></div>
 
-  <div id="toolbar">
+  <div id="lobbyToolbar">
     <input id="search" type="text" value="Search for an item">
     <button id="request" class="request">Go</button>
     <div id="toolbarRight">
@@ -32,17 +30,19 @@
     </div>
   </div>
 
-  <div id="sessionPageback">
+  <div id="lobbyPageback">
     <br>
-    <label >Create lobby with (input usernames): </label>
+    <label style="font-size:40px">Create Lobby</label>
+    <div style="margin-top: 15px"></div>
+    <label >Invite Users: </label>
     <input id = "users" type = "text" value = ""></input> <br><br>
     <label >Lobby Name: </label>
     <input id = "name" type = "text" value = ""></input> <br><br>
-    <input id = "createLobby" class="toolbarButton" type = "button" value = "Create Lobby"></input> <br><br>
+    <input id = "createLobby" class="login" type = "button" value = "Create"></input> <br><br>
 
-    <br>
-    <label style="font-size:40px">Existing Lobbies </label>
-    <br>
+    <div style="margin-top: 50px"></div>
+    <label style="font-size:40px">Join Existing Lobbies</label>
+    <div style="margin-top: 15px"></div>
     <ul id = "list">
 
     </ul>
