--- a/public/views/lobby.html
+++ b/public/views/lobby.html
@@ -21,10 +21,8 @@
 <body>
   <h1 class="loginHeader">Yeemazon</h1>
   <div style="margin-top: 20px"></div>
-  <h2 id="userGreeting" style="margin-left:12.5%">Hello {username}!</h2>
-  <div style="margin-top: 5px"></div>
 
-  <div id="toolbar">
+  <div id="chatToolbar">
     <input id="search" type="text" value="Search for an item">
     <button id="request" class="request">Go</button>
     <div id="toolbarRight">
@@ -36,7 +34,7 @@
     </div>
   </div>
 
-  <div id="sessionPageback">
+  <div id="chatPageback">
 
     <br>
     <label>Enter message</label>
